# notion-db-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  release.md
.devcontainer/: .env.example  Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: build-release.yml  test-on-push.yml
src/: commands.rs  csv_reader.rs  lib.rs  main.rs  operations.rs
test_files/: test_csv_2_rows  test_invalid
