[package]
name = "notion-db-cli"
version = "0.0.1"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.50", features = ["derive", "env"] }
csv = "1.3.1"
email-address-parser = "2.0.0"
notion-client = "1.0.10"
regex = "1.11.1"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
url = "2.5.4"
openssl = { version = "0.10.73", features = ["vendored"] }
